Fix: Ocultar formulario de contacto duplicado en version mobile

--- a/FedesConsultora_Landing/src/components/layout/Header.scss
+++ b/FedesConsultora_Landing/src/components/layout/Header.scss
@@ -264,6 +264,12 @@
                         .dropdown-header h3 {
                             font-size: 1.5rem;
                         }
+
+
+                        @media (max-width: 998px) {
+                            display: none;
+
+                        }
                     }
                 }
             }
